# vrt1-agent-bridge

./: README.md  pyproject.toml
tests/: conftest.py  test_bridge.py  test_nostr.py  test_verify.py
vrt1_agent_bridge/: __init__.py  bridge.py  nostr.py  verify.py
