[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrt1-agent-bridge"
version = "0.1.0"
description = "Bridge VERITAS inference attestations into vrt1-agents action format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "veritas @ git+https://github.com/Ifasola34/veritas.git",
    "vrt1-agents @ git+https://github.com/Ifasola34/vrt1-agents.git",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
